--------
v2.0-git
--------

[mjr] Add ability to delete multiple slices at one time.
[mjr] Add confirmation dialog for deleting time slices (Request #10361).
[mjr] Implement exclusive timers (Request #12543).
[mjr] Add ability to optionally add client, cost object, or job type to timer
      on creation.
[mjr] Add listTimeObjects support.
[mjr] Redesigned UI.
[jan] Fix listing per-client cost objects in search form.
[jan] Add Latvian translation (Jānis Eisaks <jancs@dv.lv>).
[mjr] Allow pausing and restarting timers.
[mjr] Add ajax view.
[jan] Remove Sandals widget.
[mjr] Refactor for Horde 5.
[jan] Provide default configuration files instead of .dist versions.


------
v1.0.1
------

[jan] Fix client list in search form if client source has numeric IDs
      (manilal@ejyothi.com, Bug #7966).


----
v1.0
----

[jan] Go back to search results after editing time slices from there
      (mail@dunix-data.de, Request #7012).
[jan] Check permissions when displaying time slice forms (mail@dunix-data.de,
      Bug #7027).
[jan] Fix index for table hermes_deliverables (Bug #7001).


--------
v1.0-RC1
--------

[jan] Add start and end time of stop watch to entry description (Request #5585).
[jan] Update time budget of cost objects after saving an entry.
[bak] Add OS X widget for entering time
[jan] Allow to mark job types billable (Vinay Kumar <vinay.kumar@ejyothi.com>,
      Request #5207).
[jan] Add configuration to only include billable time when summing up for
      deliverables.
[cjh] Add an initial interface for sending invoice data to Minerva
      (Duck <duck@obala.net).
[jan] Add hourly rates to job types (Duck <duck@obala.net>).
[jan] Drop incomplete invoicing support.
[jan] Add configuration for address book field used for the client listings.
      (Request #3816).
[jan] Add "Enter Time" item to sidebar menu.
[ben] Better support for MS-SQL.
[jan] Add subtotal tabs to the overview page.
[jan] Save used stop watch name in "Notes" field (tevans@tachometry.com,